--- a/app/src/main/res/layout/fragment_contact_details.xml
+++ b/app/src/main/res/layout/fragment_contact_details.xml
@@ -11,12 +11,11 @@
         tools:context=".contact_list.ContactListFragment">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/image_contact"
+            android:id="@+id/image"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/margin_medium"
-            android:src="@drawable/icon_person"
-            style="@style/style_image_theme_based_tint"
+            tools:src="@drawable/icon_person"
             app:layout_constraintBottom_toTopOf="@id/input_layout_name"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +33,7 @@
             app:layout_constraintBottom_toTopOf="@id/input_layout_surname"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/image_contact"
+            app:layout_constraintTop_toBottomOf="@id/image"
             app:layout_constraintWidth_max="300dp">
 
             <com.google.android.material.textfield.TextInputEditText
