--- a/app/src/main/res/layout/fragment_contact_list.xml
+++ b/app/src/main/res/layout/fragment_contact_list.xml
@@ -3,13 +3,17 @@
     android:id="@+id/layout_contacts"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".contact_list.ContactListFragment"
     android:orientation="vertical">
 
-    <include layout="@layout/layout_contact" />
-    <include layout="@layout/layout_contact" />
-    <include layout="@layout/layout_contact" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_contacts"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/layout_contact" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
