--- a/app/src/main/res/layout/layout_contact.xml
+++ b/app/src/main/res/layout/layout_contact.xml
@@ -7,11 +7,10 @@
     android:layout_margin="@dimen/text_size_medium">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/image_contact"
+        android:id="@+id/image"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/icon_person"
-        style="@style/style_image_theme_based_tint"
+        tools:src="@drawable/icon_person"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +24,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintStart_toEndOf="@id/image_contact"
+        app:layout_constraintStart_toEndOf="@id/image"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Name Surname" />
 
@@ -39,7 +38,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintStart_toEndOf="@id/image_contact"
+        app:layout_constraintStart_toEndOf="@id/image"
         app:layout_constraintTop_toBottomOf="@id/text_full_name"
         app:layout_constraintVertical_bias="0"
         tools:text="Phone number" />
