--- a/app/src/main/res/layout/layout_contact.xml
+++ b/app/src/main/res/layout/layout_contact.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/text_size_medium">
+    android:layout_height="wrap_content">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image"
         android:layout_width="0dp"
         android:layout_height="0dp"
         tools:src="@drawable/icon_person"
+        android:background="@drawable/drawable_contact_photo_small_background"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
